--- a/Jobsheet_01.ipynb
+++ b/Jobsheet_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOCEpz4pTT3LuoS8PjCe7nO",
+      "authorship_tag": "ABX9TyPHYIc5VyMKreev7pmPU9cr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,12 +29,12 @@
     {
       "cell_type": "code",
       "source": [
-        "# Praktikym 1: Tipe Data Dasar"
+        "# Praktikum 1: Tipe Data Dasar"
       ],
       "metadata": {
         "id": "uKkrqOJh39bO"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -50,9 +50,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ttwTGR8K4EWn",
-        "outputId": "9596401c-0bd7-45d3-dd12-51d21dde12c3"
+        "outputId": "0d142088-506d-41fe-99dd-cb9f00c15ed1"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -75,9 +75,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cirQFDlB4d74",
-        "outputId": "59fff853-ce1a-4a60-e4cb-f8eaba87e2c7"
+        "outputId": "664c4b88-63b3-4363-c3f5-7d43cf3b60b4"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,9 +100,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MVwNm8Oh4vQC",
-        "outputId": "004a4c63-1183-4a7d-c9b5-00cb3d239400"
+        "outputId": "f003d410-2c7a-4910-e50d-b021a0c7fd4b"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MOwCKJ7q4_tg",
-        "outputId": "f168f655-2444-4ce8-8422-9a3d4c5db124"
+        "outputId": "603dc06a-d3ff-427d-d452-ba7d8339dda1"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,9 +150,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "n7DrFEQH5Lrv",
-        "outputId": "4208c503-49ca-41c2-b637-dec1cb8b0850"
+        "outputId": "bcc2e96d-18f9-4a41-e3a3-f659c1c07c61"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -175,9 +175,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sX8nYIEW5bAg",
-        "outputId": "6e40ca11-55c0-4b6a-87e8-010d39236251"
+        "outputId": "e743299c-256f-4db5-976b-a47ae2ae00bd"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -200,9 +200,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pC4Kv_M-5rWE",
-        "outputId": "4bccd129-8628-45e2-e2c8-ccc72ac17868"
+        "outputId": "cc478766-2358-4fa5-b1cf-a85f27871c10"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -229,9 +229,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gxf7rGm_56oS",
-        "outputId": "ad75622e-b5e2-4446-c3ae-31272891fad5"
+        "outputId": "6d1d96ba-ba37-4574-c486-caf6413f5c94"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -254,9 +254,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W-kqvLHk6X57",
-        "outputId": "0b5d39fd-17a9-4e9e-bb35-3e5975df0f24"
+        "outputId": "456f57b4-c86b-47a9-ea6b-cc35c77540c2"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -281,9 +281,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kiu3F9-X6lJk",
-        "outputId": "65c4d316-56dc-42e9-ef28-1d4d41e7a1ea"
+        "outputId": "754c482d-68c5-492c-db42-e82e16c5b73a"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,18 +303,18 @@
       "metadata": {
         "id": "BzNZItLZ3uOG"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "5hvVBvAtIfCp",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2592e7b4-296f-43e9-9b3a-44e5d3fb7e36"
+        "outputId": "4b86e8dc-64ba-49c7-9dac-60a758cf05ef"
       },
       "outputs": [
         {
@@ -369,9 +369,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "872f70da-fbe5-4b87-93b0-01c8b49ed883"
+        "outputId": "3008f1d8-314b-4b8a-e65d-b8ebbbc6e47a"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -414,9 +414,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mUCJfbH6UcMa",
-        "outputId": "357ef186-f4be-4926-b530-309c6b76e049"
+        "outputId": "e9b252ee-351b-4828-b4d4-5b4e0dfa8b5e"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -456,9 +456,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "O4n6iCEyWiLo",
-        "outputId": "dba2462f-825a-4ff6-e425-bee79f82c2df"
+        "outputId": "ee872456-cae9-4cfc-b567-ca3385637eb3"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -488,9 +488,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uEr4VzheXPXA",
-        "outputId": "51837dcc-dfa5-4516-c993-4af08c7fe41c"
+        "outputId": "e8c70988-f7ef-42ad-c7ff-f1ca0a86bb3a"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "0AWPFk9N7X_r"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -527,9 +527,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kt1UsBWp7jLL",
-        "outputId": "f0db85b2-71d6-45a1-d18d-2c5a5a9e52fd"
+        "outputId": "6a15c4bc-8cc8-486b-cfe0-4d259341c079"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -558,9 +558,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pxP74bIN7m3b",
-        "outputId": "7527bba0-1e42-4c02-d473-2e9565515520"
+        "outputId": "2c799087-6a93-4f34-8080-9ec54d0c46f4"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -593,9 +593,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vy2KYiWr7paq",
-        "outputId": "3b7ce974-76f0-4c37-f042-d63e587c9a0f"
+        "outputId": "d50a9087-1f9d-41b5-e7d3-af7e490bd103"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
