--- a/Jobsheet_01.ipynb
+++ b/Jobsheet_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHYIc5VyMKreev7pmPU9cr",
+      "authorship_tag": "ABX9TyPT/aMuO+oYlM2rgLSpJWwM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
       "metadata": {
         "id": "uKkrqOJh39bO"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
         "id": "ttwTGR8K4EWn",
         "outputId": "0d142088-506d-41fe-99dd-cb9f00c15ed1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -77,7 +77,7 @@
         "id": "cirQFDlB4d74",
         "outputId": "664c4b88-63b3-4363-c3f5-7d43cf3b60b4"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
         "id": "MVwNm8Oh4vQC",
         "outputId": "f003d410-2c7a-4910-e50d-b021a0c7fd4b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "id": "MOwCKJ7q4_tg",
         "outputId": "603dc06a-d3ff-427d-d452-ba7d8339dda1"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,7 +152,7 @@
         "id": "n7DrFEQH5Lrv",
         "outputId": "bcc2e96d-18f9-4a41-e3a3-f659c1c07c61"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +177,7 @@
         "id": "sX8nYIEW5bAg",
         "outputId": "e743299c-256f-4db5-976b-a47ae2ae00bd"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -202,7 +202,7 @@
         "id": "pC4Kv_M-5rWE",
         "outputId": "cc478766-2358-4fa5-b1cf-a85f27871c10"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -231,7 +231,7 @@
         "id": "Gxf7rGm_56oS",
         "outputId": "6d1d96ba-ba37-4574-c486-caf6413f5c94"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -256,7 +256,7 @@
         "id": "W-kqvLHk6X57",
         "outputId": "456f57b4-c86b-47a9-ea6b-cc35c77540c2"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,7 +283,7 @@
         "id": "kiu3F9-X6lJk",
         "outputId": "754c482d-68c5-492c-db42-e82e16c5b73a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,12 +303,12 @@
       "metadata": {
         "id": "BzNZItLZ3uOG"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "5hvVBvAtIfCp",
         "colab": {
@@ -371,7 +371,7 @@
         },
         "outputId": "3008f1d8-314b-4b8a-e65d-b8ebbbc6e47a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "mUCJfbH6UcMa",
         "outputId": "e9b252ee-351b-4828-b4d4-5b4e0dfa8b5e"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -458,7 +458,7 @@
         "id": "O4n6iCEyWiLo",
         "outputId": "ee872456-cae9-4cfc-b567-ca3385637eb3"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -490,7 +490,7 @@
         "id": "uEr4VzheXPXA",
         "outputId": "e8c70988-f7ef-42ad-c7ff-f1ca0a86bb3a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
       "metadata": {
         "id": "0AWPFk9N7X_r"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -529,7 +529,7 @@
         "id": "kt1UsBWp7jLL",
         "outputId": "6a15c4bc-8cc8-486b-cfe0-4d259341c079"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,7 +560,7 @@
         "id": "pxP74bIN7m3b",
         "outputId": "2c799087-6a93-4f34-8080-9ec54d0c46f4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,7 +595,7 @@
         "id": "vy2KYiWr7paq",
         "outputId": "d50a9087-1f9d-41b5-e7d3-af7e490bd103"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -603,6 +603,41 @@
           "text": [
             "Contoh IF-ELIF-ELSE:\n",
             "Hari Rabu - Ada diskon di beberapa toko\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. NESTED IF\n",
+        "suhu = 35\n",
+        "print(\"Contoh IF Bersarang (Nested IF):\")\n",
+        "if suhu > 30:\n",
+        "     print(\"Cuaca cukup panas.\")\n",
+        "     if suhu > 40:\n",
+        "         print(\"Bahkan sangat terik! Disarankan banyak minum air.\")\n",
+        "     else:\n",
+        "         print(\"Masih relatif normal, tapi tetap jaga kesehatan.\")\n",
+        "else:\n",
+        "  print(\"Cuaca sepertinya cukup sejuk.\\n\")"
+      ],
+      "metadata": {
+        "id": "wcyClE-8lKiE",
+        "outputId": "800ea1be-8caa-46ba-d9c5-42202f94b7af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Contoh IF Bersarang (Nested IF):\n",
+            "Cuaca cukup panas.\n",
+            "Masih relatif normal, tapi tetap jaga kesehatan.\n"
           ]
         }
       ]
