--- a/Jobsheet_01.ipynb
+++ b/Jobsheet_01.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPT/aMuO+oYlM2rgLSpJWwM",
+      "authorship_tag": "ABX9TyMhSEhTfCPOJ29JannLbVpf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -623,11 +623,11 @@
         "  print(\"Cuaca sepertinya cukup sejuk.\\n\")"
       ],
       "metadata": {
-        "id": "wcyClE-8lKiE",
-        "outputId": "800ea1be-8caa-46ba-d9c5-42202f94b7af",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wcyClE-8lKiE",
+        "outputId": "800ea1be-8caa-46ba-d9c5-42202f94b7af"
       },
       "execution_count": 1,
       "outputs": [
@@ -638,6 +638,363 @@
             "Contoh IF Bersarang (Nested IF):\n",
             "Cuaca cukup panas.\n",
             "Masih relatif normal, tapi tetap jaga kesehatan.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5. Menggabungkan Percabangan dengan Operasi Logika\n",
+        "nilai_teori = 75\n",
+        "nilai_praktik = 80\n",
+        "print(\"Contoh IF dengan Operasi Logika AND/OR:\")\n",
+        "if nilai_teori >= 70 and nilai_praktik >= 70:\n",
+        "  print(\"Anda lulus karena nilai teori dan praktik memadai.\")\n",
+        "elif nilai_teori < 70 and nilai_praktik < 70:\n",
+        "  print(\"Anda perlu meningkatkan nlai teori dan praktik.\")\n",
+        "elif nilai_teori < 70:\n",
+        "  print(\"Anda perlu meningkatkan nilai teori\")\n",
+        "else:\n",
+        "  print(\"Anda perlu meningkatkan nilai praktik.\\n\")"
+      ],
+      "metadata": {
+        "id": "kvCjsPLcCVny",
+        "outputId": "ffe3709d-a8a0-4170-d498-766879fdc3b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Contoh IF dengan Operasi Logika AND/OR:\n",
+            "Anda lulus karena nilai teori dan praktik memadai.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6. Penggunaan IF Ternary (Conditional Expression)\n",
+        "angka = -5\n",
+        "print(\"Contoh IF Ternary (Conditional Expression):\")\n",
+        "status = \"Positif\" if angka > 0 else \"Negatif atau Nol\"\n",
+        "print(\"Angka =\", angka, \"=>\", status)"
+      ],
+      "metadata": {
+        "id": "OWxQCdz6DoET",
+        "outputId": "51722bbc-21ee-4f98-e461-2bd16e97b2b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Contoh IF Ternary (Conditional Expression):\n",
+            "Angka = -5 => Negatif atau Nol\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Praktikum 4: Perulangan"
+      ],
+      "metadata": {
+        "id": "E_Hgn_tnENfI"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. FOR Loop dengan range()\n",
+        "print(\"1) FOR loop dengan range()\")\n",
+        "for i in range(5):\n",
+        "  print(\"Perulangan ke-\", i)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "3WnZ03uQEfKF",
+        "outputId": "162afc10-3c08-4ccc-b0da-6fa79e245aa6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1) FOR loop dengan range()\n",
+            "Perulangan ke- 0\n",
+            "Perulangan ke- 1\n",
+            "Perulangan ke- 2\n",
+            "Perulangan ke- 3\n",
+            "Perulangan ke- 4\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 2. FOR Loop untuk mngiterasi List\n",
+        "print(\"2) FOR Loop mengiterasi List\")\n",
+        "buah = [\"apel\", \"mangga\", \"jeruk\", \"pisang\"]\n",
+        "for item in buah:\n",
+        "  print(\"Buah:\", item)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "UwFJt4FVFH7B",
+        "outputId": "e48d4529-ea0a-4725-afed-5bf1ee68c0f6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2) FOR Loop mengiterasi List\n",
+            "Buah: apel\n",
+            "Buah: mangga\n",
+            "Buah: jeruk\n",
+            "Buah: pisang\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 3. WHILE Loop\n",
+        "print(\"3) WHILE Loop sederhana\")\n",
+        "count = 0\n",
+        "while count < 5:\n",
+        "  print(\"count =\", count)\n",
+        "  count += 1\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "fqmeZdRaFk2G",
+        "outputId": "29c87801-e0bb-44e7-e7f0-25e467454f51",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3) WHILE Loop sederhana\n",
+            "count = 0\n",
+            "count = 1\n",
+            "count = 2\n",
+            "count = 3\n",
+            "count = 4\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 4. BREAK pada Loop\n",
+        "print(\"4) BREAK di dalam loop\")\n",
+        "for i in range(10):\n",
+        "  if i == 3:\n",
+        "    print(\"Loop dihentikan pada i =\", i)\n",
+        "    break\n",
+        "  print(\"i =\", i)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "K-V7zInFF9zd",
+        "outputId": "65781fcd-b9f3-49fd-8cfe-432397d3d4e5",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4) BREAK di dalam loop\n",
+            "i = 0\n",
+            "i = 1\n",
+            "i = 2\n",
+            "Loop dihentikan pada i = 3\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 5. CONTINUE pada Loop\n",
+        "print(\"5) CONTINUE di dalam Loop\")\n",
+        "for i in range(5):\n",
+        "  if i == 2:\n",
+        "    print(\"Lewati i=\", i, \"dengan continue\")\n",
+        "    continue\n",
+        "  print(\"i =\", i)\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "T70mX573GbIc",
+        "outputId": "f6656f5c-ed26-46ae-b51a-f4b38c3f516f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5) CONTINUE di dalam Loop\n",
+            "i = 0\n",
+            "i = 1\n",
+            "Lewati i= 2 dengan continue\n",
+            "i = 3\n",
+            "i = 4\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 6. NESTED Loop\n",
+        "print(\"6) NESTED Loop\")\n",
+        "for i in range(3):\n",
+        "  for j in range(2):\n",
+        "    print(f\"i ={i}, j ={j}\")\n",
+        "print()"
+      ],
+      "metadata": {
+        "id": "KQf-CRH7G14w",
+        "outputId": "f5c7d90b-306a-4ac3-9c25-455c6431fd0f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "6) NESTED Loop\n",
+            "i =0, j =0\n",
+            "i =0, j =1\n",
+            "i =1, j =0\n",
+            "i =1, j =1\n",
+            "i =2, j =0\n",
+            "i =2, j =1\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 7. Memanfaatkan ELSE pada LOOP\n",
+        "print(\"7) ELSE pada LOOP for/while\")\n",
+        "for x in range(3):\n",
+        "  print(\"x =\", x)\n",
+        "else:\n",
+        "  print(\"Loop for telah selesai tanpa break.\\n\")\n",
+        "\n",
+        "y = 0\n",
+        "while y < 3:\n",
+        "  print(\"y =\", y)\n",
+        "  y+= 1\n",
+        "else:\n",
+        "  print(\"Loop while telah selesai tanpa break.\\n\")"
+      ],
+      "metadata": {
+        "id": "Sb6rv4ncHLyG",
+        "outputId": "8128a234-c509-41f1-8175-34c5924845fb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7) ELSE pada LOOP for/while\n",
+            "x = 0\n",
+            "x = 1\n",
+            "x = 2\n",
+            "Loop for telah selesai tanpa break.\n",
+            "\n",
+            "y = 0\n",
+            "y = 1\n",
+            "y = 2\n",
+            "Loop while telah selesai tanpa break.\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 8. PASS sebagai placeholder\n",
+        "print(\"8) PASS (placeholder)\")\n",
+        "for i in range(3):\n",
+        "  if i == 1:\n",
+        "    pass\n",
+        "  print(\"i =\", i)"
+      ],
+      "metadata": {
+        "id": "ZWmUh2RfHzPh",
+        "outputId": "06ccb9f7-bcf1-445b-fe77-8c38a4b64353",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8) PASS (placeholder)\n",
+            "i = 0\n",
+            "i = 1\n",
+            "i = 2\n"
           ]
         }
       ]
