--- a/Bilangan_Prima_Genap_Ganjil.ipynb
+++ b/Bilangan_Prima_Genap_Ganjil.ipynb
@@ -71,10 +71,45 @@
         "        break\n"
       ],
       "metadata": {
-        "id": "V92k9SUPBji0"
+        "id": "V92k9SUPBji0",
+        "outputId": "77e8e415-8fd6-4eed-90f4-a821913203b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "------------------------------\n",
+            "Masukkan bilangan bulat: x\n",
+            "Input tidak valid! Harap masukkan bilangan bulat.\n",
+            "Masukkan bilangan bulat: 12\n",
+            "Bilangan 12 adalah Genap.\n",
+            "Apakah ingin mengecek bilangan lain? (ya/tidak): ya\n",
+            "\n",
+            "------------------------------\n",
+            "Masukkan bilangan bulat: 15\n",
+            "Bilangan 15 adalah Ganjil.\n",
+            "Apakah ingin mengecek bilangan lain? (ya/tidak): ya\n",
+            "\n",
+            "------------------------------\n",
+            "Masukkan bilangan bulat: 2\n",
+            "Bilangan 2 adalah Genap dan Prima.\n",
+            "Apakah ingin mengecek bilangan lain? (ya/tidak): ya\n",
+            "\n",
+            "------------------------------\n",
+            "Masukkan bilangan bulat: 3\n",
+            "Bilangan 3 adalah Ganjil dan Prima.\n",
+            "Apakah ingin mengecek bilangan lain? (ya/tidak): tidak\n",
+            "\n",
+            "Terima kasih telah menggunakan program ini!\n"
+          ]
+        }
+      ]
     }
   ]
 }
