--- a/Jobsheet_02.ipynb
+++ b/Jobsheet_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVnGbcycFZsaQUnV4Tm/sn",
+      "authorship_tag": "ABX9TyM932gtOt2s//d8pWC+aK8v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VzNQBqz8MKWH",
-        "outputId": "15bdca06-c644-47c2-daee-94975851b163"
+        "outputId": "d1ab9530-c346-4f5c-b794-74b2f3430778"
       },
       "outputs": [
         {
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CR7XOBThNC7f",
-        "outputId": "aee50eba-7ec3-4dd2-c55a-00af0f5e93a0"
+        "outputId": "008b0623-99ca-4f49-f30f-248f4490c390"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cO1DNm96NlWK",
-        "outputId": "18a8ac6a-aab4-41ae-9581-eefe337a897d"
+        "outputId": "fd43ed64-3369-489f-9a0c-71642c2fb049"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bB1QCctOkP5",
-        "outputId": "1785f810-77ff-4413-d7ad-f006dbfaec98"
+        "outputId": "fc69759b-f48d-46fc-ab08-66a1dc9c2ae0"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,9 +156,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "om9tTEqVPb2s",
-        "outputId": "ea898233-e8f9-4bef-c78d-f939e03f01a2"
+        "outputId": "8eb48681-d3af-45e4-d52e-cd21496f0d68"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_Dw4TAVP4o4",
-        "outputId": "7ace92f7-a9ee-4938-a689-2352036783db"
+        "outputId": "13634977-4b8a-4e81-8d05-a0d38e00ff83"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,9 +212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fKFr87YwQjx3",
-        "outputId": "5dec9ccd-2615-400b-bd22-c30cceebd6c1"
+        "outputId": "a615eccd-fecc-4ace-e00b-c934911b39fe"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,9 +241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N1HrGKjQRNul",
-        "outputId": "4a10312a-39f4-44d5-81aa-35301a775dae"
+        "outputId": "ffb54089-3346-4873-b7f2-ffd15c8b8e5f"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6VWVeN_bSIy4",
-        "outputId": "64cdab96-266e-477c-9e71-fb58d2ce87f4"
+        "outputId": "88d56db2-d8d7-4df8-ab24-93ec59cff912"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,6 +507,33 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "PENUGASAN"
+      ],
+      "metadata": {
+        "id": "Uuug6isQDzIA"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3.\tBuat Program: Lihat kembali praktikum 02. Modularisasi dan 03. Kelas sederahan. Buat program sederhana menggunakan dua konsep diatas tentang (Pilih salah satu: A. Penjualan HP, B. jadwal kelas, C. Parkir roda dua)."
+      ],
+      "metadata": {
+        "id": "ufe7tEWhD2Wh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NtLOEBPmD0yR"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
