--- a/Jobsheet_02.ipynb
+++ b/Jobsheet_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM932gtOt2s//d8pWC+aK8v",
+      "authorship_tag": "ABX9TyNxBROzutRaQmiytlqc91Os",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -74,7 +74,7 @@
         "id": "CR7XOBThNC7f",
         "outputId": "008b0623-99ca-4f49-f30f-248f4490c390"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -100,7 +100,7 @@
         "id": "cO1DNm96NlWK",
         "outputId": "fd43ed64-3369-489f-9a0c-71642c2fb049"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -129,7 +129,7 @@
         "id": "8bB1QCctOkP5",
         "outputId": "fc69759b-f48d-46fc-ab08-66a1dc9c2ae0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +158,7 @@
         "id": "om9tTEqVPb2s",
         "outputId": "8eb48681-d3af-45e4-d52e-cd21496f0d68"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "id": "D_Dw4TAVP4o4",
         "outputId": "13634977-4b8a-4e81-8d05-a0d38e00ff83"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,7 +214,7 @@
         "id": "fKFr87YwQjx3",
         "outputId": "a615eccd-fecc-4ace-e00b-c934911b39fe"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,7 +243,7 @@
         "id": "N1HrGKjQRNul",
         "outputId": "ffb54089-3346-4873-b7f2-ffd15c8b8e5f"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -288,7 +288,7 @@
         "id": "6VWVeN_bSIy4",
         "outputId": "88d56db2-d8d7-4df8-ab24-93ec59cff912"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,12 +528,50 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import parkir\n",
+        "\n",
+        "class Parkir:\n",
+        "  def __init__(self, plat_motor, durasi, tarif):\n",
+        "    self.plat_motor = plat_motor\n",
+        "    self.durasi = durasi\n",
+        "    self.tarif = parkir.hitung_tarif(self.durasi)\n",
+        "\n",
+        "  def tampilkan_info(self):\n",
+        "    print(f\"Plat Motor: {self.plat_motor}\")\n",
+        "    print(f\"Durasi Parkir: {self.durasi} jam\")\n",
+        "    print(f\"Tarif Parkir: Rp {self.tarif}\")\n",
+        "\n",
+        "motor1 = Parkir(\"H 10928 AI\", 2, parkir.hitung_tarif(2))\n",
+        "motor2 = Parkir(\"K 12891 WK\", 3, parkir.hitung_tarif(3))\n",
+        "\n",
+        "motor1.tampilkan_info()\n",
+        "print()\n",
+        "motor2.tampilkan_info()"
+      ],
       "metadata": {
-        "id": "NtLOEBPmD0yR"
+        "id": "NtLOEBPmD0yR",
+        "outputId": "731cfb45-f2d6-4519-ac58-5916b695b2e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Plat Motor: H 10928 AI\n",
+            "Durasi Parkir: 2 jam\n",
+            "Tarif Parkir: Rp 4000\n",
+            "\n",
+            "Plat Motor: K 12891 WK\n",
+            "Durasi Parkir: 3 jam\n",
+            "Tarif Parkir: Rp 6000\n"
+          ]
+        }
+      ]
     }
   ]
 }
