--- a/Jobsheet_02.ipynb
+++ b/Jobsheet_02.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNxBROzutRaQmiytlqc91Os",
+      "authorship_tag": "ABX9TyO/VMWScgk5w6kGhqIjVpug",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,13 +37,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VzNQBqz8MKWH",
-        "outputId": "c8bbb60f-f6bb-42be-acc6-286861f69020"
+        "outputId": "d1ab9530-c346-4f5c-b794-74b2f3430778"
       },
       "outputs": [
         {
@@ -72,9 +72,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CR7XOBThNC7f",
-        "outputId": "8eb24603-d6af-41dd-e007-28a0f7dd7b48"
+        "outputId": "008b0623-99ca-4f49-f30f-248f4490c390"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cO1DNm96NlWK",
-        "outputId": "d32a4d0b-23fa-41e9-f623-9ebb65e7c500"
+        "outputId": "fd43ed64-3369-489f-9a0c-71642c2fb049"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,9 +127,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "8bB1QCctOkP5",
-        "outputId": "076b3d82-3712-43af-9862-0c962f997951"
+        "outputId": "fc69759b-f48d-46fc-ab08-66a1dc9c2ae0"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -156,9 +156,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "om9tTEqVPb2s",
-        "outputId": "a94fee25-24c6-4347-bbdc-7c1655d172f2"
+        "outputId": "8eb48681-d3af-45e4-d52e-cd21496f0d68"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D_Dw4TAVP4o4",
-        "outputId": "26ba4c9b-7654-4553-d1e6-0c52c22830ac"
+        "outputId": "13634977-4b8a-4e81-8d05-a0d38e00ff83"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,9 +212,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fKFr87YwQjx3",
-        "outputId": "198eb2a1-71e1-4691-f2f8-6c2ec2e7f90e"
+        "outputId": "a615eccd-fecc-4ace-e00b-c934911b39fe"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,9 +241,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N1HrGKjQRNul",
-        "outputId": "856dadb0-5a0c-4f23-8cb4-7a49044fdbdf"
+        "outputId": "ffb54089-3346-4873-b7f2-ffd15c8b8e5f"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -286,9 +286,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6VWVeN_bSIy4",
-        "outputId": "dc080030-537c-41ed-fbbe-d55f4fa04b73"
+        "outputId": "88d56db2-d8d7-4df8-ab24-93ec59cff912"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Sqfz3NCqW2m4",
-        "outputId": "bde50028-ba53-46da-adb0-70765239ea7c"
+        "outputId": "3ef95d48-ab1c-425a-98b3-36d707efe2aa"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -415,9 +415,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X_lG036rY5EJ",
-        "outputId": "e86390a5-b4ea-4cec-fa62-a0f069f2673a"
+        "outputId": "5a02ecb9-ecce-4f54-ecde-8f1f7d30a2a5"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -492,9 +492,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5muPDjhCZpRc",
-        "outputId": "71df915c-cc09-4db2-952d-48cd5018338f"
+        "outputId": "7713c680-2235-42b8-82d0-c19d34468abb"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,7 +529,7 @@
     {
       "cell_type": "code",
       "source": [
-        "import parkir\n",
+        "import parkir_roda_dua\n",
         "\n",
         "class Parkir:\n",
         "  def __init__(self, plat_motor, durasi, tarif):\n",
@@ -551,12 +551,12 @@
       ],
       "metadata": {
         "id": "NtLOEBPmD0yR",
-        "outputId": "e8912123-91f3-4ce9-a646-96ecc8be0740",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f9014023-3e8d-4a55-c38d-3804f6084646"
       },
-      "execution_count": 39,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "stream",
