--- a/Jobsheet_03_PBO.ipynb
+++ b/Jobsheet_03_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOd4h4RUFsvbBhA5qUKn66I",
+      "authorship_tag": "ABX9TyO+axb1gUlR2WkOy80lPaoV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -453,6 +453,102 @@
       "metadata": {
         "id": "SIYatGbh-KaT"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "    def __init__(self, name, score):\n",
+        "        self.__name = name\n",
+        "        self.__score = None\n",
+        "        self.__grade = None\n",
+        "        self.score = score\n",
+        "\n",
+        "    @property\n",
+        "    def name(self):\n",
+        "        return self.__name\n",
+        "\n",
+        "    @name.setter\n",
+        "    def name(self, value):\n",
+        "        self.__name = value\n",
+        "\n",
+        "    @property\n",
+        "    def score(self):\n",
+        "        return self.__score\n",
+        "\n",
+        "    @score.setter\n",
+        "    def score(self, value):\n",
+        "        if 0 <= value <= 100:\n",
+        "            self.__score = value\n",
+        "            self.__update_grade()\n",
+        "        else:\n",
+        "            raise ValueError(\"Score harus antara 0 hingga 100.\")\n",
+        "\n",
+        "    # Getter untuk grade\n",
+        "    @property\n",
+        "    def grade(self):\n",
+        "        return self.__grade\n",
+        "\n",
+        "    # Method internal untuk update grade berdasarkan score\n",
+        "    def __update_grade(self):\n",
+        "        if self.__score >= 90:\n",
+        "            self.__grade = \"A\"\n",
+        "        elif self.__score >= 80:\n",
+        "            self.__grade = \"B\"\n",
+        "        elif self.__score >= 70:\n",
+        "            self.__grade = \"C\"\n",
+        "        elif self.__score >= 60:\n",
+        "            self.__grade = \"D\"\n",
+        "        else:\n",
+        "            self.__grade = \"E\"\n",
+        "\n",
+        "    # Menampilkan informasi lengkap\n",
+        "    def show_info(self):\n",
+        "        print(f\"Nama Mahasiswa: {self.__name}\")\n",
+        "        print(f\"Nilai: {self.__score}\")\n",
+        "        print(f\"Grade: {self.__grade}\")\n",
+        "\n",
+        "    # Destruktor\n",
+        "    def __del__(self):\n",
+        "        print(f\"Data mahasiswa {self.__name} telah dihapus dari sistem.\")\n",
+        "\n",
+        "def main():\n",
+        "  mhs = Student(\"Siti\", 87)\n",
+        "  mhs.show_info()\n",
+        "  print()\n",
+        "  mhs.score = 93\n",
+        "  mhs.show_info()\n",
+        "  print()\n",
+        "  del mhs\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "  main()\n"
+      ],
+      "metadata": {
+        "id": "IltHwgMf3wgm",
+        "outputId": "70295e22-8de0-4be2-9309-5c5e58f21043",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Nama Mahasiswa: Siti\n",
+            "Nilai: 87\n",
+            "Grade: B\n",
+            "\n",
+            "Nama Mahasiswa: Siti\n",
+            "Nilai: 93\n",
+            "Grade: A\n",
+            "\n",
+            "Data mahasiswa Siti telah dihapus dari sistem.\n"
+          ]
+        }
+      ]
     }
   ]
 }
