--- a/Jobsheet_03_PBO.ipynb
+++ b/Jobsheet_03_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO+axb1gUlR2WkOy80lPaoV",
+      "authorship_tag": "ABX9TyMBEXiLb0WZPq+I2ddh+vxb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -513,10 +513,10 @@
         "        print(f\"Data mahasiswa {self.__name} telah dihapus dari sistem.\")\n",
         "\n",
         "def main():\n",
-        "  mhs = Student(\"Siti\", 87)\n",
+        "  mhs = Student(\"Sasa\", 80)\n",
         "  mhs.show_info()\n",
         "  print()\n",
-        "  mhs.score = 93\n",
+        "  mhs.score = 90\n",
         "  mhs.show_info()\n",
         "  print()\n",
         "  del mhs\n",
@@ -526,26 +526,26 @@
       ],
       "metadata": {
         "id": "IltHwgMf3wgm",
-        "outputId": "70295e22-8de0-4be2-9309-5c5e58f21043",
+        "outputId": "a5da848d-8eb5-4f37-9ab7-d9aacff4b5f6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Nama Mahasiswa: Siti\n",
-            "Nilai: 87\n",
+            "Nama Mahasiswa: Sasa\n",
+            "Nilai: 80\n",
             "Grade: B\n",
             "\n",
-            "Nama Mahasiswa: Siti\n",
-            "Nilai: 93\n",
+            "Nama Mahasiswa: Sasa\n",
+            "Nilai: 90\n",
             "Grade: A\n",
             "\n",
-            "Data mahasiswa Siti telah dihapus dari sistem.\n"
+            "Data mahasiswa Sasa telah dihapus dari sistem.\n"
           ]
         }
       ]
