--- a/Jobsheet_03.ipynb
+++ b/Jobsheet_03.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMBEXiLb0WZPq+I2ddh+vxb",
+      "authorship_tag": "ABX9TyNzn8a9MqQ2u0n9/eDyn1Zp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/isawich/2025_PBO_TI1C/blob/main/Jobsheet_03_PBO.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/isawich/2025_PBO_TI1C/blob/main/Jobsheet_03.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -482,14 +482,12 @@
         "            self.__score = value\n",
         "            self.__update_grade()\n",
         "        else:\n",
-        "            raise ValueError(\"Score harus antara 0 hingga 100.\")\n",
+        "            raise ValueError(\"Nilai harus berada diantara 0 hingga 100.\")\n",
         "\n",
-        "    # Getter untuk grade\n",
         "    @property\n",
         "    def grade(self):\n",
         "        return self.__grade\n",
         "\n",
-        "    # Method internal untuk update grade berdasarkan score\n",
         "    def __update_grade(self):\n",
         "        if self.__score >= 90:\n",
         "            self.__grade = \"A\"\n",
@@ -502,13 +500,11 @@
         "        else:\n",
         "            self.__grade = \"E\"\n",
         "\n",
-        "    # Menampilkan informasi lengkap\n",
         "    def show_info(self):\n",
         "        print(f\"Nama Mahasiswa: {self.__name}\")\n",
         "        print(f\"Nilai: {self.__score}\")\n",
         "        print(f\"Grade: {self.__grade}\")\n",
         "\n",
-        "    # Destruktor\n",
         "    def __del__(self):\n",
         "        print(f\"Data mahasiswa {self.__name} telah dihapus dari sistem.\")\n",
         "\n",
@@ -526,12 +522,12 @@
       ],
       "metadata": {
         "id": "IltHwgMf3wgm",
-        "outputId": "a5da848d-8eb5-4f37-9ab7-d9aacff4b5f6",
+        "outputId": "717f8c42-36d1-4046-b6d4-0d9b4de9aef2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
