--- a/Jobsheet_04_PBO.ipynb
+++ b/Jobsheet_04_PBO.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNx7emeX+OWEdjU+5bkB8UE",
+      "authorship_tag": "ABX9TyO/J/YtTbobQqua5DW6lh90",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "hbFruEUOi00R",
         "outputId": "fb5d65fb-c25d-4861-d639-4ef3fa115e69",
@@ -137,7 +137,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -218,7 +218,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,8 +283,7 @@
         "  print(f\"Jenis makanan: {kucing.jenis_makanan}\")\n",
         "  kucing.bernapas()\n",
         "  print(f\"Nama organisme: {kucing.nama}\")\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "78vLq2VQo4Fl",
@@ -293,7 +292,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +334,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +433,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -533,7 +532,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,6 +556,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "TUGAS"
+      ],
+      "metadata": {
+        "id": "srUQy52E5q2Q"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Mahasiswa:\n",
+        "  def __inti__(self, nama, NIM, IPK):\n",
+        "    self.nama = nama\n",
+        "    self.NIM = NIM\n",
+        "    self.IPK = IPK"
+      ],
+      "metadata": {
+        "id": "CSXTNZ9n5tBn"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
